--- a/faisal_lab12/pubspec.yaml
+++ b/faisal_lab12/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.5
   cloud_firestore: ^4.3.0
   firebase_auth: ^4.2.2
+  firebase_core: ^2.4.0
 
 dev_dependencies:
   flutter_test:
